RI-5960 fixed borders are not aligned

--- a/redisinsight/ui/src/pages/browser/modules/key-details/components/key-details-subheader/styles.module.scss
+++ b/redisinsight/ui/src/pages/browser/modules/key-details/components/key-details-subheader/styles.module.scss
@@ -7,13 +7,15 @@
 
   .keyFormatterItem {
     max-width: 100px;
-    margin-right: 0;
+  }
+
+  :global(.euiFlexGroup--gutterLarge>.euiFlexItem) {
+    margin: 12px 0 !important;
   }
 
   .showTtlItem {
     max-width: 110px;
     display: 'flex';
-    margin-left: 0;
     .showTtlCheckbox {
       font-weight: 400;
       font-size: 14px;
@@ -40,7 +42,6 @@
   .addBtnContainer {
     max-width: 40px;
     align-self: center;
-    margin-right: 0 !important;
     :global(.euiButton) {
       height: 24px !important;
       width: 27px !important;
